[gd_scene load_steps=18 format=3 uid="uid://clko172mpgaee"]

[ext_resource type="FontFile" uid="uid://bmt6ceey3cljn" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="1_8fo1c"]
[ext_resource type="Script" uid="uid://b0av60b5oaxvt" path="res://Scripts/game_over.gd" id="1_ek8ke"]
[ext_resource type="Texture2D" uid="uid://cycgtmpcdkkeb" path="res://Assets/Sprites/lotus-dying.png" id="2_ek8ke"]
[ext_resource type="Texture2D" uid="uid://bwcgk8nbtyvk4" path="res://Assets/Sprites/menu_button.png" id="6_j3ryr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eoghk"]
atlas = ExtResource("2_ek8ke")
region = Rect2(448, 384, 64, 64)

[sub_resource type="Animation" id="Animation_j3ryr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 320)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_14u15"]
resource_name = "move_lotus"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 320), Vector2(256, 272)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjluv"]
_data = {
&"RESET": SubResource("Animation_j3ryr"),
&"move_lotus": SubResource("Animation_14u15")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rjluv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gjtdd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eoghk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_14u15"]
atlas = ExtResource("6_j3ryr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3817r"]
texture = SubResource("AtlasTexture_14u15")
region_rect = Rect2(160, 0, 160, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ryr"]
atlas = ExtResource("6_j3ryr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mitgx"]
texture = SubResource("AtlasTexture_j3ryr")
region_rect = Rect2(160, 0, 160, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjluv"]
atlas = ExtResource("6_j3ryr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rjluv"]
texture = SubResource("AtlasTexture_rjluv")
region_rect = Rect2(0, 0, 160, 24)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_ek8ke")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 416.0
color = Color(0, 0.121569, 0, 1)

[node name="Label" type="Label" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_left = 48.0
offset_top = 128.0
offset_right = 462.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("1_8fo1c")
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_top = 32.0
offset_right = 414.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_8fo1c")
theme_override_font_sizes/font_size = 32
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
position = Vector2(64, 320)
texture = SubResource("AtlasTexture_eoghk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rjluv")
}

[node name="MenuButton" type="Button" parent="."]
modulate = Color(0.266667, 0.988235, 0.611765, 1)
offset_left = 176.0
offset_top = 208.0
offset_right = 336.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("1_8fo1c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rjluv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gjtdd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_eoghk")
theme_override_styles/hover = SubResource("StyleBoxTexture_3817r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mitgx")
theme_override_styles/normal = SubResource("StyleBoxTexture_rjluv")
text = "Main Menu"

[connection signal="mouse_entered" from="MenuButton" to="." method="_on_menu_button_mouse_entered"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
